--- a/blueprints/manager/azure-manager-blueprint.yaml
+++ b/blueprints/manager/azure-manager-blueprint.yaml
@@ -57,6 +57,8 @@ inputs:
     type: string
   network_interface_name:
     type: string
+  public_ip_name:
+    type: string
   manager_disks:
     default: {}
 
@@ -99,10 +101,19 @@ node_templates:
   manager_nic:
     type: cloudify.azure.nodes.NetworkInterfaceCard
     properties:
-      network_interface_name: {get_input: subnet_name}
+      network_interface_name: {get_input: network_interface_name}
+      azure_config: { get_property: [azure_configuration, azure_config] }
     relationships:
-      - target: manager_network
+      - target: manager_subnet
         type: cloudify.azure.relationships.nic_connected_to_subnet
+      - target: manager_public_ip
+        type: cloudify.azure.relationships.nic_connected_to_public_ip
+
+  manager_public_ip:
+    type: cloudify.azure.nodes.PublicIP
+    properties:
+      public_ip_name: {get_input: public_ip_name}
+      azure_config: { get_property: [azure_configuration, azure_config] }
 
   azure_configuration:
     type: azure_configuration
@@ -127,8 +138,6 @@ node_templates:
       compute_user: {get_input: compute_user}
       compute_password: {get_input: compute_password}
       public_key: {get_input: public_key}
-      virtual_network_name: {get_input: virtual_network_name}
-      subnet_name: {get_input: subnet_name}
       azure_config: { get_property: [azure_configuration, azure_config] }
       install_agent: false
     relationships:
