--- a/blueprints/compute/inputs.yaml.template
+++ b/blueprints/compute/inputs.yaml.template
@@ -13,6 +13,7 @@ storage_account_name: ''
 account_type: ''
 # storage_account_deletable: False
 
+# compute_disks: ''
 # To add disks to the machine, make a list of disk with these properties:
 # name, size (in GiB), attach (True or False) and caching (ReadWrite, ReadOnly, None)
 # Example:
