--- a/blueprints/manager/azure-manager-blueprint.yaml
+++ b/blueprints/manager/azure-manager-blueprint.yaml
@@ -47,6 +47,8 @@ inputs:
     type: string
   resource_group_name:
     type: string
+  availability_set_name:
+    type: string
   virtual_network_name:
     type: string
   virtual_network_address_prefix:
@@ -68,6 +70,15 @@ node_templates:
     properties:
       resource_group_name: {get_input: resource_group_name}
       azure_config: { get_property: [azure_configuration, azure_config] }
+
+  manager_availability_set:
+    type: cloudify.azure.nodes.AvailabilitySet
+    properties:
+      availability_set_name: {get_input: availability_set_name}
+      azure_config: { get_property: [azure_configuration, azure_config] }
+    relationships:
+      - target: manager_resource_group
+        type: cloudify.azure.relationships.availability_set_contained_in_resource_group
 
   manager_storage_account:
     type: cloudify.azure.nodes.StorageAccount
@@ -147,6 +158,8 @@ node_templates:
       azure_config: { get_property: [azure_configuration, azure_config] }
       install_agent: false
     relationships:
+      - target: manager_availability_set
+        type: cloudify.azure.relationships.instance_contained_in_availability_set
       - target: manager_storage_account
         type: cloudify.azure.relationships.instance_depends_on_storage_account
       - target: manager_nic
