--- a/plugin.yaml
+++ b/plugin.yaml
@@ -155,12 +155,6 @@ node_types:
   cloudify.azure.nodes.Datadisks:
     derived_from: cloudify.nodes.Root
     properties:
-      compute_name:
-        type: string
-        default: ''
-      storage_account_name:
-        type: string
-        default: ''
       disks:
         default: {}
         description: >
@@ -248,6 +242,9 @@ relationships:
 
   cloudify.azure.relationships.instance_connected_to_nic:
     derived_from: cloudify.relationships.connected_to
-  
+
   cloudify.azure.relationships.disk_attach_to_instance:
     derived_from: cloudify.relationships.connected_to
+
+  cloudify.azure.relationships.disk_contained_in_storage_account:
+    derived_from: cloudify.relationships.contained_in
