--- a/blueprints/manager/inputs.yaml.template
+++ b/blueprints/manager/inputs.yaml.template
@@ -25,5 +25,5 @@ public_ip_name: ''
 # name, size (in GiB), attach (True or False) and caching (ReadWrite, ReadOnly, None)
 # Example:
 # disks:
-#   - { name: 'datadisk-1', size: 100, attache: False, caching: 'None' }
-#   - { name: 'datadisk-2', size: 500, attache: False, caching: 'ReadWrite' }
+#   - { name: 'datadisk-1', size: 100, attach: False, caching: 'None' }
+#   - { name: 'datadisk-2', size: 500, attach: False, caching: 'ReadWrite' }
