--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # Required metadata
-sonar.projectKey=org.codehaus.sonar:python-simple-sonar-runner
+sonar.projectKey=cloudify-azure-plugin:sonar-runner
 sonar.projectName=Cloudify Azure Plugin Sonar
 sonar.projectVersion=1.0
 
