--- a/plugin.yaml
+++ b/plugin.yaml
@@ -71,6 +71,28 @@ node_types:
         delete:
           implementation: azure.plugin.storage.delete
 
+  cloudify.azure.nodes.SecurityGroup:
+    derived_from: cloudify.nodes.SecurityGroup
+    properties:
+      security_group_name:
+        type: string
+        default: ''
+      rules:
+        description: >
+          A list of rules for the security group. The required input is 'name'.
+        default: {}
+      azure_config:
+        default: {}
+      deletable:
+        type: boolean
+        default: true
+    interfaces:
+      cloudify.interfaces.lifecycle:
+        create:
+          implementation: azure.plugin.security_group.create
+        delete:
+          implementation: azure.plugin.security_group.delete
+
   cloudify.azure.nodes.Network:
     derived_from: cloudify.nodes.Network
     properties:
