--- a/blueprints/manager/azure-manager-blueprint.yaml
+++ b/blueprints/manager/azure-manager-blueprint.yaml
@@ -49,6 +49,10 @@ inputs:
     type: string
 #  availability_set_name:
 #    type: string
+#  security_group_name:
+#    type: string
+#  security_group_rules:
+#    default: {}
   virtual_network_name:
     type: string
   virtual_network_address_prefix:
@@ -88,6 +92,16 @@ node_templates:
       - target: manager_resource_group
         type: cloudify.azure.relationships.storage_account_contained_in_resource_group
 
+#  manager_security_group:
+#    type: cloudify.azure.nodes.SecurityGroup
+#    properties:
+#      security_group_name: {get_input: security_group_name}
+#      rules: {get_input: security_group_rules}
+#      azure_config: { get_property: [azure_configuration, azure_config] }
+#    relationships:
+#      - target: manager_resource_group
+#        type: cloudify.azure.relationships.security_group_contained_in_resource_group
+
   manager_network:
     type: cloudify.azure.nodes.Network
     properties:
@@ -107,6 +121,8 @@ node_templates:
     relationships:
       - target: manager_network
         type: cloudify.azure.relationships.subnet_connected_to_network
+#      - target: manager_security_group
+#        type: cloudify.azure.relationships.subnet_connected_to_security_group
 
   manager_nic:
     type: cloudify.azure.nodes.NetworkInterfaceCard
