--- a/blueprints/nodecellar/azure-blueprint.yaml
+++ b/blueprints/nodecellar/azure-blueprint.yaml
@@ -21,18 +21,8 @@ imports:
 #####################################################################################
 
 inputs:
-  publisher_name:
-    default: 'Canonical'
-    type: string
-  offer:
-    default: 'UbuntuServer'
-    type: string
-  sku:
-    default: '14.04.3-LTS'
-    type: string
-  version:
-    default: 'latest'
-    type: string
+  image:
+    default: {}
   flavor_id:
     default: 'Standard_A1'
     type: string
@@ -124,11 +114,7 @@ node_templates:
   mongod_host:
     type: nodecellar.nodes.MonitoredServer
     properties:
-      publisher_name: { get_input: publisher_name }
-      offer: { get_input: offer }
-      sku: { get_input: sku }
-      version: { get_input: version }
-      flavor_id: { get_input: flavor_id }
+      image: { get_input: image }
       compute_name: {get_input: mongod_compute_name}
       storage_account_name: {get_input: mongod_storage_account_name}
       compute_user: {get_input: compute_user}
@@ -141,10 +127,7 @@ node_templates:
   nodejs_host:
     type: nodecellar.nodes.MonitoredServer
     properties:
-      publisher_name: { get_input: publisher_name }
-      offer: { get_input: offer }
-      sku: { get_input: sku }
-      version: { get_input: version }
+      image: { get_input: image }
       flavor_id: { get_input: flavor_id }
       compute_name: {get_input: node_js_compute_name}
       storage_account_name: {get_input: nodejs_storage_account_name}
