--- a/blueprints/compute/compute.yaml
+++ b/blueprints/compute/compute.yaml
@@ -5,18 +5,8 @@ imports:
   - plugin.yaml
 
 inputs:
-  publisher_name:
-    default: 'Canonical'
-    type: string
-  offer:
-    default: 'UbuntuServer'
-    type: string
-  sku:
-    default: '14.04.3-LTS'
-    type: string
-  version:
-    default: 'latest'
-    type: string
+  image:
+    default: {}
   flavor_id:
     default: 'Standard_A1'
     type: string
@@ -66,10 +56,7 @@ node_templates:
       cloudify_agent:
         default:
           user: { get_input: compute_user }
-      publisher_name: { get_input: publisher_name }
-      offer: { get_input: offer }
-      sku: { get_input: sku }
-      version: { get_input: version }
+      image: { get_input: image }
       flavor_id: { get_input: flavor_id }
       compute_name: { get_input: compute_name }
       compute_user: { get_input: compute_user }
